<resources>
    <string name="app_name">Utility Belt</string>
    <string name="action_settings">Settings</string>
    <string name="flash_cards">Flash Cards</string>
    <string name="notes">Notes</string>
    <string name="calender">Calender</string>
    <string name="to_do_list">To-do List</string>
    <string name="iou">I.O.U.</string>
    <string name="travel">Travel</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="pref_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_data_sync">Data &amp; Sync</string>

    <string name="pref_vibrate">Vibrate</string>
    <string name="pref_dark_mode">Dark mode</string>
    <string name="pref_notifications">Notifications</string>
    <string name="icn_settings">Settings button</string>
    <string name="notes_cardview">Notes cardview</string>
    <string name="note_title">Note Title</string>
    <string name="bookmark_flag">bookmark flag</string>
    <string name="action_actions">Actions</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_button">Add Button</string>
    <string name="untitled_note">Untitled_Note</string>
    <string name="action_delete">Delete</string>
    <string name="action_thumbnail">Change thumbnail</string>
    <string name="action_bookmark">Favorite</string>
    <string name="delete_msg">Warning: DELETE</string>
    <string name="delete_title">This note will be deleted. This cannot be undone.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="warning">warning</string>
</resources>
