<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_header_general"
        android:icon="@drawable/ic_info_black_24dp">

        Enable/disable dark theme
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="darkMode"
            android:title="@string/pref_dark_mode"
            android:summaryOn="Active: Dark mode"
            android:summaryOff="Active: Light mode"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_header_notifications"
        android:icon="@drawable/ic_notifications_black_24dp">

        Enable/disable notifications
        Note: A 'parent' preference, which enables/disables child preferences (below)
        when checked/unchecked.
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="notifications"
            android:title="@string/pref_notifications" />

        Enable/disable vibrate on notification
        NOTE: This preference will be enabled only when the checkbox above is checked.
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:dependency="notifications"
            android:key="notifications_vibrate"
            android:title="@string/pref_vibrate" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_header_data_sync"
        android:icon="@drawable/ic_sync_black_24dp">

        Pop up allowing edit of sync frequency
        <ListPreference
            android:defaultValue="180"
            android:entries="@array/pref_sync_frequency_titles"
            android:entryValues="@array/pref_sync_frequency_values"
            android:key="sync_frequency"
            android:summary="%s"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_sync_frequency" />

        Sync settings menu
        <Preference android:title="@string/pref_title_system_sync_settings">
            <intent android:action="android.settings.SYNC_SETTINGS" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>