<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:padding="5dp"
    android:layout_gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/alert_title"
        android:textSize="24sp"
        android:paddingBottom="8dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="12dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp" >

        <ImageView
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_warning_24"
            android:gravity="center"
            android:contentDescription="@string/warning" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/alert_message"
            android:textSize="18sp"
            android:paddingStart="10dp"
            android:paddingEnd="0dp" />

    </LinearLayout>

    <View style="@style/Divider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_ok"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/ok"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>